deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aion-faucet-web
spec:
  replicas: 2
  selector:
    matchLabels:
      name: aion-faucet-web
  template:
    metadata:
      labels:
        name: aion-faucet-web
    spec:
      containers:
        - name: application
          image: bloxbean/aion-faucet-web:0.0.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
