service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: aion-faucet-web-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    name: aion-faucet-web
