kubernetes-ingress.yml
# configmap.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aion4j-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: faucet-web.aion4j.org
      http:
        paths:
          - backend:
              serviceName: aion-faucet-web-service
              servicePort: 80
